--- a/index.html
+++ b/index.html
@@ -17,20 +17,23 @@
   <body>
 
     <div class="box1">
-
       <div>
-        <img src="images/image-qr-code.png" style="width:370px;height:370px;">
+        <img src="images/image-qr-code.png" style="width:350px;height:350px;">
       </div>
 
-      <div class="text1">
-        Improve your front-end skills by building projects
+      <div class="box2"></div>
+
+      <div class="box3">
+        <div class="text1">
+          Improve your front-end skills by building projects
+        </div>
       </div>
 
-      <div class="text2">
-        </br>
-        Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+      <div class="box4">
+        <div class="text2">
+          <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+        </div>
       </div>
-    </div>
   
   </body>
 </html>
