--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width">
 
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
@@ -18,7 +18,7 @@
 
     <div class="box1">
       <div>
-        <img src="images/image-qr-code.png" style="width:350px;height:350px;">
+        <img src="images/image-qr-code.png" style="width:340px;height:340px;">
       </div>
 
       <div class="box2"></div>
